# drone-dashboard

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  Makefile  README.md  RELEASE_NOTES.md  deno.json  index.html  proxy.ts  vite.config.ts
.github/: pull_request_template.md
backend/: README.md  build.bat  build.sh  deno.json  go.mod  go.sum  main.go  main.ts
docs/: ARCHITECTURE.md  component-refactoring-plan.md  deno-testing-guide.md  frontend-exports-reference.md  jotai-testing-guide.md  leaderboard-refactoring-plan.md  line-counts-all.tsv  msw-snapshot-feature.md  phase-4-leaderboard-feature.md  phase-5-bracket-feature.md
e2e/: deno.json  generate-snapshot.ts  playwright.config.ts
frontend/: README.md  deno.json  index.html  proxy.ts  test_setup.ts  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1745384867090-a6dfdc45e7b02.mjs
gobackend/: README.md  build.bat  build.sh  go.mod  main.go
rustbackend/: Cargo.toml  README.md  build.bat  build.sh
rustbackend/src/: main.rs
scratchapd/: closest-lap-prize-feature-spec.md  line-count-audit-2026-02-10.md  nzo-format-integration-plan.md  nzo-race-order-change-impact-2026-02-12.md  nzo-race-order-implementation-changes-2026-02-14.md  nzo-top24-double-elimination-format.md
scripts/: README-generate-snapshot.md  deploy-to-pi.sh  find-issue-for-branch.sh  finish-worktree.sh  new-worktree.sh  prd.txt  preflight-build.sh  task-complexity-report.json  trace-log-viewer.ts
snapshots/: 96-pilots.json  generated-final-test.json  test1.json
(+393 files in other folders)
