[package]
name = "drone-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http2", "json"] }
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
http = "1.0"
hyper = { version = "1.0", features = ["full"] }
include_dir = "0.7"
mime_guess = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
